Expanded introduction, rearranged sections and removed half-formed ideas particularly examples.

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -6634,3 +6634,55 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2016arXiv161005234M},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@article {MR2332425,
+    AUTHOR = {Grotowski, Joseph F. and Shatah, Jalal},
+     TITLE = {Geometric evolution equations in critical dimensions},
+   JOURNAL = {Calc. Var. Partial Differential Equations},
+  FJOURNAL = {Calculus of Variations and Partial Differential Equations},
+    VOLUME = {30},
+      YEAR = {2007},
+    NUMBER = {4},
+     PAGES = {499--512},
+      ISSN = {0944-2669},
+   MRCLASS = {53C44 (35K55 58E20)},
+  MRNUMBER = {2332425},
+MRREVIEWER = {James McCoy},
+       URL = {https://doi.org/10.1007/s00526-007-0100-2},
+}
+
+@article {MR1180392,
+    AUTHOR = {Chang, Kung-Ching and Ding, Wei Yue and Ye, Rugang},
+     TITLE = {Finite-time blow-up of the heat flow of harmonic maps from
+              surfaces},
+   JOURNAL = {J. Differential Geom.},
+  FJOURNAL = {Journal of Differential Geometry},
+    VOLUME = {36},
+      YEAR = {1992},
+    NUMBER = {2},
+     PAGES = {507--515},
+      ISSN = {0022-040X},
+   MRCLASS = {58E20 (35K55 58G11)},
+  MRNUMBER = {1180392},
+MRREVIEWER = {Martin Fuchs},
+       URL = {http://projecteuclid.org/euclid.jdg/1214448751},
+}
+
+@article {MR1600272,
+    AUTHOR = {Schlatter, Andreas E. and Struwe, Michael and Tahvildar-Zadeh,
+              A. Shadi},
+     TITLE = {Global existence of the equivariant {Y}ang-{M}ills heat flow
+              in four space dimensions},
+   JOURNAL = {Amer. J. Math.},
+  FJOURNAL = {American Journal of Mathematics},
+    VOLUME = {120},
+      YEAR = {1998},
+    NUMBER = {1},
+     PAGES = {117--128},
+      ISSN = {0002-9327},
+   MRCLASS = {58E15 (53C07 58G11)},
+  MRNUMBER = {1600272},
+MRREVIEWER = {Yun Mei Chen},
+       URL =
+              {http://muse.jhu.edu/journals/american_journal_of_mathematics/v120/120.1schlatter.pdf},
+}
