Minor tidying and removed heuristics.

--- a/StandardPaper2.tex
+++ b/StandardPaper2.tex
@@ -118,6 +118,7 @@
 \DeclareMathOperator{\Rm}{Rm}
 \DeclareMathOperator{\weingarten}{\mathcal{W}}
 \DeclareMathOperator{\inj}{inj}
+\DeclareMathOperator{\SO}{SO}
 
 %Environments
 \newcommand{\Theo}[3]{\begin{#1}\label{#2} #3 \end{#1}}
