--- a/main.tex
+++ b/main.tex
@@ -60,11 +60,11 @@ Let us also remark that if \(F'(0) = 1\), the metric \(g\) extends to a \(C^{1,\
 Here are two motivating examples described in \cite{MR2332425}.
 
 \begin{example}
-Let \(u = \sin(\psi)\). Then degree one harmonic map heat flow gives \(F = \tfrac{1}{2} \sin(2\psi)\) and \((M, g)\) is the round two-sphere. Degree \(\ell\) harmonic map heat flow gives \(F = \tfrac{\ell^2}{2} \sin(2\psi)\).Higher dimensional, equivariant harmonic maps \(B^n \to \S^n\) with equivariant \(SO(n-1)\) symmetries gives rise to \(C = n-1\), \(F = \tfrac{n-1}{2} \sin(2\psi)\).
+Let \(u = \sin(\psi)\). Then degree one harmonic map heat flow gives \(F = \tfrac{1}{2} \sin(2\psi)\) and \((M, g)\) is the round two-sphere. Degree \(\ell\) harmonic map heat flow gives \(F = \tfrac{\ell^2}{2} \sin(2\psi)\).Higher dimensional, equivariant harmonic maps \(B^n \to \S^n\) with equivariant \(\SO(n-1)\) symmetries gives rise to \(C = n-1\), \(F = \tfrac{n-1}{2} \sin(2\psi)\).
 \end{example}
 
 \begin{example}
-The \(SO(4)\) equivariant Yang-Mills flow on \(\R^4\) gives rise to \(C = 1\), \(F = 4 \psi(1 - \psi)(1 - \tfrac{1}{2}\psi)\). The higher dimensional (\(SO(n)\) equivariant on \(\R^n\)) analogue is \(C = n-3\), \(F = 2(n-2) \psi(1-\psi)(1 - \tfrac{1}{2}\psi)\).
+The \(\SO(4)\) equivariant Yang-Mills flow on \(\R^4\) gives rise to \(C = 1\), \(F = 4 \psi(1 - \psi)(1 - \tfrac{1}{2}\psi)\). The higher dimensional (\(\SO(n)\) equivariant on \(\R^n\)) analogue is \(C = n-3\), \(F = 2(n-2) \psi(1-\psi)(1 - \tfrac{1}{2}\psi)\).
 \end{example}
 
 Here we are motivated by generalising some interesting properties of these two examples observed in \cite{MR2332425}. These observations are that in either example, the critical dimension (\(n=2\) for harmonic maps, \(n=4\) for Yang-Mills) in which the problems are conformally invariant gives \(C = 1\) and finite time blow up for the harmonic map heat flows (first proven in \cite{MR1180392}) and no finite time blow up for the Yang-Mills flow (first proven in \cite{MR1600272}). The curious point is that for Yang-Mills flow, the metric \(g\) has a conical singularity but no blow up, whereas for the harmonic map heat flow, the metric is smooth and does blow up. Evidently, it is not the conical singularity that determines blow up. The answer given is that the coeffecient \(\ell^2 = 1\) for harmonic map heat flow and \(\ell^2 = 4\) for Yang-Mills flow determines blow up.
@@ -79,9 +79,9 @@ and the linear operator,
 L(\psi) = \psi_{rr} + \frac{C}{r} \psi_r - \frac{1}{r^2} F'(0) \psi
 \end{equation}
 so that the harmonic map heat flow, equation \eqref{eq:pde} becomes
-\[
-\partial_t \psi = L(\psi) - \frac{1}{r^2} \bar{F}(\psi).
-\]
+\begin{equation}
+\partial_t \psi - L(\psi) = - \frac{1}{r^2} \bar{F}(\psi).
+\end{equation}
 
 The operator \(L\) is an Euler operator with \emph{characteristic equation}
 \begin{equation}
@@ -118,6 +118,12 @@ with roots \(\beta_{\pm} = \pm \sqrt{F'(0)}\). Degree one harmonic map heat flow
 
 \section{Energy and Gradient Flow}
 \label{subsec:intro_energygradient}
+
+It is standard that both the harmonic map heat flow and Yang-Mills flow are the gradient flow for Dirichlet energies,
+\[
+E(\Psi) = \frac{1}{2} \int_M \|\nabla \Psi\|^2 d\mu
+\]
+where \(\|\cdot\|\) and \(\nabla\) are suitably interpreted. Thus our equation \eqref{eq:pde} should be the gradient flow of energy amongst equivariant solutions. Let us record here the simple statement of this fact and make some basic observations about finite energy solutions.
 
 \begin{defn}
 \label{defn:energy}
@@ -158,215 +164,6 @@ So as \(r\to 0\), \(\psi_r\) must not blow up faster than \(1/r\) and (if say, \
 \]
 for some \(\beta > 0\).
 \end{rem}
-
-\section{Heuristic Analysis}
-
-Because the coefficients are singular at \(r=0\), finite time blow up of bounded solutions, if it occurs, must occur at the origin \(r = 0\) (see Lemma \ref{lem:apriori_bounds}). Heuristically then, to see when blow up occurs we need only consider the asymptotics near \(r = 0\). For the purpose of illustration, we linearise both the potential function\(F\) and the solution \(\psi\). That is, let \(\psi = r^{\beta}\) for some \(\beta\) and \(F(z) = A z\) with \(A > 0\). In the sections that follow we will show that the heuristic analysis models the general behaviour.
-
-Our choice of \(\psi\) is stationary:
-\[
-\partial_t \psi = 0,
-\]
-and the spatial part is a second order, linear Euler equation:
-\[
-\psi_{rr} + \frac{C}{r} \psi_r - \frac{1}{r^2} F(\psi) = \left[\beta(\beta-1) + C \beta - A\right]r^{\beta-2}.
-\]
-Thus \(\psi = r^{\beta}\) is a
-\begin{equation}
-\label{eq:betasubsuper}
-\begin{cases}
-\text{sub-solution if } & \beta^2 + (C - 1) \beta - A \geq 0, \\
-\text{solution if } & \beta^2 + (C - 1) \beta - A = 0, \\
-\text{super-solution if } & \beta^2 + (C - 1) \beta - A \leq 0.
-\end{cases}
-\end{equation}
-In conjunction with the comparison principle, sub-solutions are used to show blow up while super-super solutions are used to show no blow-up occurs. A solution may of course be used for either purpose.
-
-Therefore, for fixed \(C > 0\) and \(A > 0\) we are interested in the roots of the characteristic equation
-\begin{equation}
-\label{eq:char_poly}
-p(\beta) = \beta^2 + (C - 1) \beta - A.
-\end{equation}
-The discriminant is
-\[
-\Delta = (C-1)^2 + 4 A > 0,
-\]
-so we always have real, distinct roots
-\[
-\frac{1 - C}{2} \pm \frac{1}{2} \sqrt{(C-1)^2 + 4 A}.
-\]
-Notice that since \(A > 0\),
-\[
-\frac{1}{2} \sqrt{(C-1)^2 + 4 A} > \left|\frac{1-C}{2}\right|
-\]
-hence one root is negative which is of no interest to us because of our boundary condition \(\psi(0, t) = 0\), and the other root is positive. Let us set
-\[
-\beta_0 = \frac{1 - C}{2} + \frac{1}{2} \sqrt{(C-1)^2 + 4 A} > 0.
-\]
-Then we have \(0 < \beta \leq \beta_0\) corresponds to super-solutions while \(\beta_0 \leq \beta\) corresponds to sub-solutions.
-
-We have
-\[
-\psi = r^{\beta}, \quad \psi' = \beta r^{\beta-1}, \quad \psi'' = \beta(\beta-1) r^{\beta - 2}.
-\]
-Thus if \(0 < \beta_0 < 1\) we obtain sub-solutions \(r^{\beta}, \beta_0 \leq \beta < 1\) with \(C^1\) blow up at the origin. If \(\beta_0 > 1\), we obtain super-solutions \(r^{\beta}, \beta_0 \leq \beta < 1\) with no \(C^1\) blow up at the origin. Similarly \(0 < \beta_0 < 2\) gives sub-solutions with \(C^2\) blow up while \(2 < \beta_0\) gives super-solutions with no \(C^2\) blow up. It turns out the boundary cases \(\beta_0 = 1, 2\) may be perturbed by a time-dependent factor to induce blow up.
-
-\subsection{Formal Asymptotics}
-\label{subsec:asymptotics}
-
-Now we look at formal asymptotics near \(r = 0\). Let us suppose that \(F\) is analytic,
-\[
-F(z) = \sum_{n=1}^{\infty} F_n z^n
-\]
-and that we have an analytic solution,
-\[
-\psi(r) = \sum_{n=1}^{\infty} \psi_n r^n.
-\]
-Then
-\[
-\psi' = \sum_{n=0}^{\infty} (n+1) \psi_{n+1} r^n, \quad \psi'' = \sum_{n=0}^{\infty} (n+1)(n+2) \psi_{n+2} r^n.
-\]
-and
-\[
-F(\psi) = F(\sum_{n=1}^{\infty} \psi_n r^n) = \sum_{n=1}^{\infty} a_n r^n
-\]
-with
-\[
-a_n = \sum_{k=1}^n F_k S_{n,k}(\psi_i)
-\]
-where
-\[
-S_{n,k}(\psi_i) = \sum_{\pi \in P_{n,k}} {k \choose \pi} \psi_1^{\pi_1} \cdots \psi_k^{\pi_k},
-\]
-and
-\[
-P_{n,k} = \{\pi = (\pi_1, \dots, \pi_n) : \sum_{i=1}^n \pi_i = k, \sum_{i=1}^n i \pi_i = n\},
-\]
-is a sum over partitions of \(n\) into \(k\) parts in frequency-of-parts form and
-\[
-{k \choose \pi} = \frac{k!}{\pi_1! \cdots \pi_n!}
-\]
-is the multinomial coefficient.
-
-Substitution gives
-\[
-\begin{split}
-0&= r^2 \psi_{rr} + Cr\psi_r - F(\psi) \\
-&= \sum_{n=2}^{\infty} n(n-1) \psi_n r^n + C \sum_{n=1}^{\infty} n \psi_n r^n - \sum_{n=1}^{\infty} a_n r^n \\
-&= (C \psi_1 - a_1) r + \sum_{n=2}^{\infty} \left[(n^2 + (C-1)n)\psi_n - a_n\right] r^n \\
-&= (C - F_1) \psi_1 r + \sum_{n=2}^{\infty} \left[(n^2 +(C-1)n)\psi_n - a_n\right] r^n \\
-\end{split}
-\]
-
-If \(C = F_1\) (for example, when \(C = 1\) and \(F'(0) = 1\)), we may freely choose \(\psi_1\). Otherwise, we must have \(\psi_1 = 0\). Either way, we then seek to recursively solve
-\[
-(n^2 + (C-1)n)\psi_n - a_n = 0
-\]
-for \(\psi_n\). Note that in the sum defining \(a_n\), from the definitions of \(S_{n,k}\) and \(P_{n,k}\) (namely that \(\sum_{i=1}^n \pi_i = k\) and \(\sum_{i=1}^n i \psi_i = n\)) the appearance of \(\psi_n\) is to first order and occurs only in the term \(S_{n,1} = F_1 \psi_n\). This is just another way of saying that among the degree \(n\) terms of \(F(\psi)\), there is precisely one term, \(F_1 \psi_n\) involving \(\psi_n\).
-
-Thus we have,
-\[
-a_n = F_1 \psi_n + q_n(\psi_1, \dots, \psi_{n-1})
-\]
-where
-\[
-q_n = \sum_{k=2}^n F_k \sum_{\pi \in P_{n,k}} {k \choose \pi} \psi_1^{\pi_1} \cdots \psi_k^{\pi_k}
-\]
-is a degree \(n\) polynomial in \(n-1\) variables with \(q_n(z_1, \cdots, z_{n-1}) = 0\). Therefore,
-\[
-\left[n^2 + (C-1) n - F_1\right] \psi_n =  q(\psi_1, \dots, \psi_{n-1}).
-\]
-
-Thus we have the recurrence relation,
-\begin{equation}
-\label{eq:recurrence}
-p(n) \psi_n = q_n (\psi_1, \dots, \psi_{n-1})
-\end{equation}
-where \(p\) is the characteristic polynomial from equation \eqref{eq:char_poly} and in the case \(n=1\), \(p\) reduces to \(p(1) = C - F_1\) so that the recurrence relation \eqref{eq:recurrence} holds for \(n=1\) by defining \(q_1 = 0\).
-
-If \(p(n) \ne 0\) for all natural numbers, we may choose \(\psi_1\) freely and the remaining coefficients are given recursively by
-\[
-\psi_n = \frac{q_n(\psi_1, \cdots, \psi_{n-1})}{p(n)}, \quad n > 1. 
-\]
-
-More generally, we have the following:
-
-\begin{lemma}
-\label{lem:heuristic_asymptotics}
-Suppose \(n_0\) is a positive, integer root with \(p(n_0) = 0\). Then
-\[
-\psi(r) = \psi_0(r^{n_0})
-\]
-for some analytic function \(\psi_0\) with \(\psi_0(0) = 0\) and arbitrary \(\psi_0'(0)\). That is we may choose \(\psi_{n_0}\) arbitrarily, and \(\psi_n = 0\) for \(n\) not divisible by \(n_0\).
-\end{lemma}
-
-\begin{proof}
-To see this, first observe that \(n_0 = 1\) if and only if
-\[
-1^2 + (C - 1) \cdot 1 - F_1 = 0 \Leftrightarrow C = F_1
-\]
-in which case
-\[
-p(n) = n^2 + (C - 1) n - C = (n-1)(n + C)
-\]
-and the other root is \(-C = -F_1 < 0\). That is \(p(n) \ne 0\) for all \(n > 1\) and we may solve the recurrence relation \eqref{eq:recurrence} uniquely for \(\psi_n, n > 1\) given any \(\psi_1\).
-
-For \(n_0 > 1\) recall that we already observed that there is precisely one positive root of \(p\) and hence \(p(n) \ne 0\) for \(n \ne n_0\). Then we have \(p(1) \ne 0\) and recalling that we defined \(q_1 = 0\), the recurrence relation \eqref{eq:recurrence} is satisfied only if \(\psi_1 = 0\). But then observe that \(q_2 = q_1(\psi_1) = q_1(0) = 0\) and so
-\[
-p(2) \psi_2 = q_2 = 0
-\]
-and either \(p(2) = 0\) with \(\psi_2\) arbitrary if \(n_0 = 2\) or \(\psi_2 = 0\) if \(n_0 > 2\). If \(n_0 > 3\), we find \(q_3 = q_3(\psi_1, \psi_2) = q_3(0, 0) = 0\) implies \(\psi_3 = 0\). Continuing by induction we find that \(\psi_n = 0\) for all \(n\) with \(1 < n < n_0\). For \(n_0\) we get
-\[
-0 = p(n_0) \psi_{n_0} = q_{n_0-1} = 0
-\]
-and we may freely choose \(\psi_{n_0}\). So we have \(\psi_n = 0\) for \(n = 1, \cdots, n_0 - 1\) and \(\psi_{n_0}\) is arbitrary. Now we claim this implies \(q_{n_0 + j} = 0\) for \(j = 1, \cdots, n_0 - 1\). To see this, we recall that
-\[
-q_{n_0 + j} = \sum_{k=2}^{n_0 + j} F_k \sum_{\pi \in P_{n_0+j,k}} {k \choose \pi} \psi_1^{\pi_1} \cdots \psi_k^{\pi_k}
-\]
-with
-\[
-P_{n_0 + j,k} = \{\pi = (\pi_1, \dots, \pi_{n_0 + j}) : \sum_{i=1}^{n_0+j} \pi_i = k, \sum_{i=1}^{n_0+j} i \pi_i = n_0 + j\}.
-\]
-Consider the possible \(\pi\) with \(\pi_{n_0} \ne 0\). These must satisfy
-\[
-\sum_{i=1}^{n_0-1} i \pi_i + n_0 \pi_{n_0} + \sum_{i=n_0+1}^{n_0 + j} i\pi_i = n_0 + j
-\]
-which rearranges to
-\[
-\sum_{i=1}^{n_0-1} i \pi_i + \sum_{i=n_0+1}^{n_0 + j} i\pi_i = n_0(1 - \pi_{n_0}) + j
-\]
-If all the \(\pi_i\) with \(i \ne n_0\) vanish, then
-\[
-j = n_0(\pi_{n_0} - 1).
-\]
-But this is impossible since \(1 \leq j < n_0\) and \(\pi_{n_0} \geq 0\) is an integer.
-
-Therefore, any \(\pi\) with and entry \(\pi_{n_0} \ne 0\) must also have \(\pi_i \ne 0\) for some \(i \ne n_0\). For \(j = 1\) we have \(q_{n_0 + 1}\) is a polynomial in \(\psi_i\) for \(1 \leq i \leq n_0\). But \(\psi_i = 0\) for \(1 \leq i \leq n_0 -1\) and every term of \(q_{n_0 + 1}\) has a term \(\psi_i^{\pi_i}\) with \(i \ne n_0\) and thus \(q_{n_0 + j}\) vanishes. Now continue by induction (e.g. every term of \(q_{n_0 + 2}\) has \(\psi_i^{\pi_i}\) with \(1 \leq i \leq n_0 - 1\) or \(i = n_0 + 1\) and hence vanishes).
-
-Finally, a further induction argument may be used to show that \(\psi_{m n_0 +j} = 0\) for any natural number \(m\) and any \(j\) with \(1 \leq j \leq n_0 - 1\). The necessary ingredient is to show that any term of \(q_{m n_0 + j}\) involving \(\psi_{m n_0}^{\pi_{m n_0}}\) with \(\pi_{m n_0} \ne 0\) necessarily also includes terms of the form \(\psi_i^{\pi_i}\) with \(i\) not divisible by \(n_0\). This follows in the same way as before: we have
-\[
-\sum_{i=1}^m i n_0 \pi_{i n_0} + \sum_{i=1}^m \sum_{j=1}^{n_0 -1} (i n_0 + j) \pi_{i n_0 + j} = m n_0 + j
-\]
-rearranges to
-\[
-\sum_{i=1}^m \sum_{j=1}^{n_0 -1} (i n_0 + j) \pi_{i n_0 + j} = n_0\left(m - \sum_{i=1}^m i \pi_{i n_0}\right) + j
-\]
-and if the left hand side vanishes we have
-\[
-j = n_0\left(\sum_{i=1}^m i \pi_{i n_0} - m\right)
-\]
-but \(1 \leq j \leq n_0 - 1\) implies \(j\) is not divisible by \(n_0\) a contradiction. Thus at least one \(\pi_{im + j} \ne 0\) and we can repeat the same induction over \(j\).
-\end{proof}
-
-\subsubsection*{Example: Critical Dimension}
-
-It's particularly instructive to consider the critical cases of two-dimensional harmonic map heat flow and four-dimensional Yang-Mills flow. In both cases \(C = 1\) (whereas in higher dimension \(C > 1\)). Thus in the critical dimension,
-\[
-p(\beta) = \beta^2 - A
-\]
-hence \(\beta_0 = \sqrt{A}\).
-
-For the degree \(\ell\)-harmonic map heat flow, \(\beta_0 = \ell\) while for the Yang-Mills flow, \(\beta_0 = 2\). Thus for Yang-Mills and higher degree harmonic map heat flow (\(\ell > 1\)), we have \(\beta_0 > 1\) and no \(C^1\) blow up occurs. However for, \(\ell \leq 2\) and Yang-Mills we do expect \(C^2\) blow up. For \(\ell > 2\), there is no \(C^2\) blow up.
 
 \section{Stationary solutions}
 \label{sec:stationary}
